--- a/Home.kv
+++ b/Home.kv
@@ -2,6 +2,7 @@
 <WindowManager>:
     LoginWindows:
     ProfileWindows:
+    ProfileDisplayWindows:
     HelpWindows:
     DashboardWindows:
     WaterTrackerWindows:
