--- a/Summary.kv
+++ b/Summary.kv
@@ -3,17 +3,14 @@
     name: "Summary"
     GridLayout:
         cols:1
-        height: .9
         GridLayout:
             cols:1
             #The following 2 labels are used as titles for the current window
+            Widget:
+                size_hint: None, None
+                height: 20
             Label:
-                id: summary_title_id
-                text:'Team C Group Project'
-                font_size: 50
-                color: 1,50,0,1
-            Label:
-                id: Calorie_sub_title_id
+                id: summary_text_id
                 text:'Summary Page'
                 font_size: 50
                 color: 0,1,0,1
@@ -23,35 +20,39 @@
                     size_hint: None, None
                     height: .5
             GridLayout:
-                cols:5
+                cols:7
                 Widget:
                     size_hint: None, None
                     height: 4
-                #This creates a textbox that asks for the username
-                TextInput:
-                    id: username
+                Label:
+                    id: username_label
+                    text: "Username:"
                     font_size: 30
-                    hint_text: "Username"
-                    multiline: False
-                    focus: True
-                    on_text_validate: category_input.focus = True
+                #This creates a textbox that asks for the username
+                Label:
+                    id: username
+                    text: "Alex123"
+                    font_size: 20
                 Widget:
                     size_hint: None, None
                     height: 4
                 #This creates a textbox that asks for which category to display the summary for
-                TextInput:
-                    id: category_input
+                Label:
+                    id: category_label
+                    text: "Choice:"
                     font_size: 30
+                Label:
+                    id: category_input
+                    font_size: 20
                     hint_text: "category"
                     multiline: False
-                    focus: True
-                    on_text_validate: True
                 Widget:
                     size_hint: None, None
                     height: 4
+
         Widget:
             size_hint: None, None
-            height: 10
+            height: 30
         GridLayout:
             cols:5
             Widget:
@@ -59,18 +60,113 @@
                 height: 10
             #This creates a button that displays the respective graph when pressed
             Button:
-                id: Graph
-                text: 'Graph'
+                id: water_graph
+                text: 'Water Graph'
                 font_size: 30
                 on_press:
-                    summary_display.text = "You will hit your goals!!!"
+                    summary_display.text = "You will hit your water goals!!!"
+                    category_input.text = "water"
                 on_release:
                     app.get_data(username, category_input)
-                    username.text = ""
-                    category_input.text = ""
             Widget:
                 size_hint: None, None
                 height: 10
+
+            #This creates a button that takes the user back to the Dashboard when pressed
+            Button:
+                id: calorie_graph
+                text: 'Calorie Graph'
+                font_size: 30
+                on_press:
+                    summary_display.text = "You will hit your calorie goals!!!"
+                    category_input.text = "calories"
+                on_release:
+                    app.get_data(username, category_input)
+            Widget:
+                size_hint: None, None
+                height: 10
+        GridLayout:
+            cols:5
+            Widget:
+                size_hint: None, None
+                height: 10
+            #This creates a button that displays the respective graph when pressed
+            Button:
+                id: weight_graph
+                text: 'Weight Graph'
+                font_size: 30
+                on_press:
+                    summary_display.text = "You will hit your weight goals!!!"
+                    category_input.text = "weight"
+                on_release:
+                    app.get_data(username, category_input)
+            Widget:
+                size_hint: None, None
+                height: 10
+
+            #This creates a button that takes the user back to the Dashboard when pressed
+            Button:
+                id: happy_graph
+                text: 'Happiness Graph'
+                font_size: 30
+                on_press:
+                    summary_display.text = "You will hit your happiness goals!!!"
+                    category_input.text = "happy"
+                on_release:
+                    app.get_data(username, category_input)
+            Widget:
+                size_hint: None, None
+                height: 10
+        GridLayout:
+            cols:5
+            Widget:
+                size_hint: None, None
+                height: 10
+            #This creates a button that displays the respective graph when pressed
+            Button:
+                id: calorie_happy_graph
+                text: 'Calorie/Happy'
+                font_size: 30
+                on_press:
+                    summary_display.text = "Calories = Happy!!!"
+                    category_input.text = " calories"
+                on_release:
+                    app.get_data(username, category_input)
+
+            Widget:
+                size_hint: None, None
+                height: 10
+
+            #This creates a button that takes the user back to the Dashboard when pressed
+            Button:
+                id: calorie_weight_graph
+                text: 'Calorie/Weight'
+                font_size: 30
+                on_press:
+                    summary_display.text = "Calorie and Weight Corrolate!!!"
+                    category_input.text = "happy"
+                on_release:
+                    app.get_data(username, category_input)
+            Widget:
+                size_hint: None, None
+                height: 10
+        GridLayout:
+            cols:5
+            Widget:
+                size_hint: None, None
+                height: 10
+            #This creates a button that displays the respective graph when pressed
+            Button:
+                id: view_profile
+                text: 'View Profile'
+                font_size: 30
+                on_press:
+                    app.root.current = "Profile"
+                    root.manager.transition.direction = "right"
+            Widget:
+                size_hint: None, None
+                height: 10
+
             #This creates a button that takes the user back to the Dashboard when pressed
             Button:
                 id: summary_exit
@@ -82,12 +178,12 @@
                     summary_display.text = "Drop that Pizza and track!!"
             Widget:
                 size_hint: None, None
-                height: 10
+                height: 10                        
         GridLayout:
             cols:1
             #This displays encouraging text
             Label:
                 id: summary_display
                 text:'Amazing Results!!'
-                font_size: 50
+                font_size: 30
                 color: 1,50,0,1
