--- a/Home.kv
+++ b/Home.kv
@@ -2,7 +2,7 @@
 <WindowManager>:
     LoginWindows:
     ProfileWindows:
-    ProfileDisplayWindows:
+    DisplayWindows:
     HelpWindows:
     DashboardWindows:
     WaterTrackerWindows:
