--- a/Summary.kv
+++ b/Summary.kv
@@ -161,8 +161,8 @@
                 text: 'View Profile'
                 font_size: 30
                 on_press:
-                    app.root.current = "Profile"
-                    root.manager.transition.direction = "right"
+                    app.root.current = "Display"
+                    root.manager.transition.direction = "up"
             Widget:
                 size_hint: None, None
                 height: 10
