--- a/Display.kv
+++ b/Display.kv
@@ -1,12 +1,12 @@
 #This is the window for the profile creation page
-<ProfileWindows>:
-    name:"ProfileDisplay"
+<DisplayWindows>:
+    name: "Display"
     GridLayout:
         cols: 1
         spacing: '20dp'
         #This label is displayed as a title on the window
         Label:
-            text: "User Profile Page"
+            text: "User Profile"
             font_size: 80
             color: 1,50,0,1
         Label:
@@ -20,13 +20,13 @@
             cols: 2
             spacing: '10dp'
             #This creates a textbox that asks for the username
-            TextInput:
-                id: username
-                hint_text: "User Name:"
-                multiline: False
-                font_size: 30
-                focus: True
-                on_text_validate: password_id.focus = True
+            # Label:
+            #     id: username
+            #     text: app.get_user_data()
+            #     multiline: False
+            #     font_size: 30
+            #     focus: True
+            #     on_text_validate: password_id.focus = True
             #This creates a textbox that asks for the password
             TextInput:
                 id: password_id
@@ -70,33 +70,29 @@
                 on_text_validate:
                     app.valid_entry(username, password_id, name_id, height_id, initial_weight_id, age_id, info)
         GridLayout:
-            cols:2
-            spacing: '10dp'
-            #This creates a button that submits all information to the sql database so the new profile is created upon press
+            cols:5
+            Widget:
+                size_hint: None, None
+                height: 10
+            #This creates a button that submits the user's happy rating and displays encouraging text upon press
             Button:
-                text: "SUBMIT"
-                font_size: 40
-                on_press:
-                    app.add_user(username, password_id, name_id, height_id, initial_weight_id, age_id, info)
+                id: Summary
+                text:'Summary'
+                font_size: 35
                 on_release:
-                    username.text = ""
-                    password_id.text = ""
-                    name_id.text = ""
-                    height_id.text = ""
-                    initial_weight_id.text = ""
-                    age_id.text = ""
-
-            #This creates a button that takes the user back to the login screen and empties all textboxes upon press
-            Button:
-                text: "EXIT"
-                font_size: 40
-                on_release:
-                    app.root.current = "Login"
+                    app.root.current = "Summary"
                     root.manager.transition.direction = "down"
-                    username.text = ""
-                    password_id.text = ""
-                    name_id.text = ""
-                    height_id.text = ""
-                    initial_weight_id.text = ""
-                    age_id.text = ""
-                    info.text = ""
+            Widget:
+                size_hint: None, None
+                height: 10
+            #This creates a button that takes the user back to the dashboard and displays text upon press
+            Button:
+                id: Display_Dashboard
+                text:"Dashboard"
+                font_size: 30
+                on_release:
+                    app.root.current = "Dashboard"
+                    root.manager.transition.direction = "left"
+            Widget:
+                size_hint: None, None
+                height: 10
