--- a/Dashboard.kv
+++ b/Dashboard.kv
@@ -1,6 +1,6 @@
 #This is the window for the Dashboard
 <DashboardWindows>:
-    id: Dashboard_id
+    id: Dashboard
     name: "Dashboard" 
     GridLayout:  
         cols:1
@@ -10,6 +10,7 @@
             font_size: 50
             color: 1,50,0,1
         Label:
+            id: dashboard_id
             text:'**Dashboard**'
             color: 0,1,0,1
             font_size: 45
