--- a/Weight.kv
+++ b/Weight.kv
@@ -28,13 +28,9 @@
                     size_hint: None, None
                     height: 4
                 #This creates a textbox that asks for the username
-                TextInput:
+                Label:
                     id: username
                     font_size: 30
-                    hint_text: "Username"
-                    multiline: False
-                    focus: True
-                    on_text_validate: weight.focus = True
                 Widget:
                     size_hint: None, None
                     height: 4
@@ -62,6 +58,8 @@
                 id: Submit
                 text: 'Submit'
                 font_size: 30
+                on_press:
+                    username.text = app.get_user_name()
                 on_release:
                     weight_display.text = "Thanks for tracking today!!!"
                     app.send_data_category(username, weight)
